Update README and update comments in notebook

--- a/scraper.ipynb
+++ b/scraper.ipynb
@@ -896,7 +896,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "2072ea88",
    "metadata": {},
    "outputs": [
@@ -1101,7 +1101,7 @@
     }
    ],
    "source": [
-    "# Top Repo Today\n",
+    "# Top 10 Repo Today\n",
     "query = \"\"\"\n",
     "        SELECT *\n",
     "        FROM githubtable\n",
@@ -1114,7 +1114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "0a1a8247",
    "metadata": {},
    "outputs": [
@@ -1319,7 +1319,7 @@
     }
    ],
    "source": [
-    "# Top Starred Repo Today\n",
+    "# Top 10 Starred Repo Today\n",
     "query = \"\"\"\n",
     "        SELECT *\n",
     "        FROM githubtable\n",
@@ -1332,7 +1332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "3ec25147",
    "metadata": {},
    "outputs": [
@@ -1446,7 +1446,7 @@
     }
    ],
    "source": [
-    "# Top Programming Languages\n",
+    "# Top 10 Programming Languages\n",
     "query = \"\"\"\n",
     "        SELECT \"Programming Language\",\n",
     "            SUM(Stars) AS \"Total Stars\",\n",
